# private-ai-platform-kit

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  artifacthub-repo.yml  mkdocs.yml  pyproject.toml  requirements-docs.in  requirements-docs.txt  requirements-quality.txt  requirements-sdk-build.in  requirements-sdk-test.in  versions.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  repository-settings.json
0.27.0/: 404.html  index.html  sitemap.xml
0.27.1/: 404.html  index.html  sitemap.xml
api-contracts/: inference-gateway.openapi.json  rag-service.openapi.json
charts/: README.md
config-contracts/: inference-gateway.config.json  rag-service.config.json
development/: 404.html  index.html  sitemap.xml
docs/: README.md  agent-sandbox-integration.md  ai-governance-crosswalk.md  architecture.md  benchmarks-and-evals.md  capacity-sizing.md  client-examples.md  cost-model.md  customer-handoff-example.md  decision-guide.md  distribution.md  faq.md  feature-inventory.md  getting-started.md  glossary.md  gpu-coding-agent-tenant-example.md  index.html  index.md  owasp-llm-top-10-mapping.md  production-readiness.md  proof.md  quickstart.md  references.md  regulated-offline-tenant-example.md  release-verification.md  scope-and-non-goals.md  security-overview.md  (+2 more)
sdk/python/: ai_platform_client.py  pyproject.toml
sdk/python/tests/: test_client.py
(+867 files in other folders)
