[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-ai-platform-kit-client"
version = "0.17.0"
description = "First-party Python client for the Private AI Platform Kit inference gateway."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Private AI Platform Kit maintainers" }]
keywords = ["llm", "gateway", "openai-compatible", "kubernetes", "private-ai"]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/RamazanKara/private-ai-platform-kit"
Documentation = "https://ramazankara.github.io/private-ai-platform-kit/"
Source = "https://github.com/RamazanKara/private-ai-platform-kit"

[tool.hatch.build.targets.wheel]
# Single-module distribution: ship the one client module.
include = ["ai_platform_client.py"]
